crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unique_and_indexed_snapshot@unique_and_indexed_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Users(models.Model):
    id = models.IntegerField()
    email = models.TextField(unique=True)
    username = models.TextField(unique=True)
    department = models.TextField(null=True, blank=True)
    status = models.TextField(default="active")

    class Meta:
        managed = False
        db_table = "users"
        indexes = [
            models.Index(fields=["department"], name="ix_users__idx_department"),
        ]
