crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unique_and_indexed_snapshot@unique_and_indexed_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "users")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    #[sea_orm(unique)]
    pub email: String,
    #[sea_orm(unique)]
    pub username: String,
    #[sea_orm(indexed)]
    pub department: Option<String>,
    #[sea_orm(default_value = "active")]
    pub status: String,
}

// Index definitions (SeaORM uses Statement builders externally)
// idx_department on [department]
vespera::schema_type!(Schema from Model, name = "UsersSchema");
impl ActiveModelBehavior for ActiveModel {}
